--- a/content/blogs/loading-guards-in-blazor.mdx
+++ b/content/blogs/loading-guards-in-blazor.mdx
@@ -112,7 +112,7 @@ else
 
 ##
 
-These work great with Fluxor (but don't require it) - Fluxor gives you a single source of truth (`IState<T>`) and a clean `IsLoaded` flag—perfect for a guard.
+These work great with Fluxor (but don't require it) - Fluxor gives you a single source of truth (`IState<T>`) and a clean `IsLoaded` flag-perfect for a guard.
 Without Fluxor, just expose a `bool IsReady` from your service and bind it to `When`.
 
 ## Guidelines
@@ -137,7 +137,7 @@ Loading guards cut boilerplate, improve perceived performance, and make your Bla
 </WeatherGuard>
 ```
 
-No more scattered null-checks—just clean, readable markup that lights up as data arrives. Happy guarding! 😎
+No more scattered null-checks-just clean, readable markup that lights up as data arrives. Happy guarding! 😎
 
 
 
