--- a/content/blogs/maui-blazor.mdx
+++ b/content/blogs/maui-blazor.mdx
@@ -1,7 +1,7 @@
 ---
 canonicalUrl: 'https://bradystroud.dev/blogs/maui-blazor'
 coverImage: /uploads/header-.net-maui-blazor.webp
-title: .NET MAUI Blazor template — Build your UI once
+title: .NET MAUI Blazor template - Build your UI once
 date: 2022-07-27T14:30:00.000Z
 tags:
   - .net-maui
@@ -21,7 +21,7 @@ Another post for Matt Goldman's .NET MAUI UI July! [.NET MAUI UI July](https://g
 
 From [Microsoft Learn | Introduction to .NET MAUI Blazor](https://docs.microsoft.com/en-us/shows/xamarinshow/introduction-to-net-maui-blazor--the-xamarin-show)
 
-When I first read about MAUI Blazor, I was excited at the idea of building my UI just once and being able to run and deploy it everywhere. When I tried it out for the first time, I was disappointed to find the official MAUI Blazor template only had a MAUI app — No Blazor.
+When I first read about MAUI Blazor, I was excited at the idea of building my UI just once and being able to run and deploy it everywhere. When I tried it out for the first time, I was disappointed to find the official MAUI Blazor template only had a MAUI app - No Blazor.
 
 I decided I'd build a template with the whole solution in a nice structure so I can start developing fully cross-platform apps quickly.
 
