--- a/content/blogs/maui-setup-macos.mdx
+++ b/content/blogs/maui-setup-macos.mdx
@@ -1,6 +1,6 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/maui-setup-macos"
-title: ".NET MAUI setup on macOS — build once, run everywhere"
+title: ".NET MAUI setup on macOS - build once, run everywhere"
 date: 2025-07-01T10:00:00.000Z
 tags:
   - .net-maui
