--- a/content/blogs/maui-vs-flutter.mdx
+++ b/content/blogs/maui-vs-flutter.mdx
@@ -1,7 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/maui-vs-flutter"
 coverImage: /uploads/grrr.webp
-title: .NET MAUI vs Flutter — Multi-platform frameworks showdown
+title: .NET MAUI vs Flutter - Multi-platform frameworks showdown
 date: 2022-07-22T14:30:00.000Z
 tags:
   - maui-ui-july
@@ -12,7 +12,7 @@ tags:
   - .net-maui
 ---
 
-Here it is — my post for [.NET MAUI July](https://goforgoldman.com/2022/05/19/maui-ui-july.html)
+Here it is - my post for [.NET MAUI July](https://goforgoldman.com/2022/05/19/maui-ui-july.html)
 
 ## .NET MAUI
 
@@ -22,11 +22,11 @@ Here it is — my post for [.NET MAUI July](https://goforgoldman.com/2022/05/19/
 
 ✅ **Pros**:
 
-- .NET — MAUI is built on to the .NET ecosystem. This means .NET developers will feel at home and be able to use their favorite Nuget packages
+- .NET - MAUI is built on to the .NET ecosystem. This means .NET developers will feel at home and be able to use their favorite Nuget packages
 
 ❌ **Cons**:
 
-- Immature — Released in May 2022, MAUI hasn't had a chance to be put to the test
+- Immature - Released in May 2022, MAUI hasn't had a chance to be put to the test
 
 ## Flutter
 
@@ -36,12 +36,12 @@ Built, maintained and used by Google, Flutter boasts the ability to deploy to mo
 
 ✅ **Pros**:
 
-- Maturity — Flutter 1.0 was launched in December 2018 and has had time to build a community
-- More supported platforms — Runs on Linux 🐧
+- Maturity - Flutter 1.0 was launched in December 2018 and has had time to build a community
+- More supported platforms - Runs on Linux 🐧
 
 ❌ **Cons**:
 
-- Dart — To build Flutter apps, developers will need to learn a new language.
+- Dart - To build Flutter apps, developers will need to learn a new language.
 
 ## 🤔 The key differences
 
@@ -49,7 +49,7 @@ These are the important considerations when deciding between MAUI and Flutter.
 
 - **Web Deployment**: Flutter apps can be deployed to the web. This isn't possible with MAUI but you can create a solution that shares Blazor UI code between a Blazor app and MAUI app. \
   See [Blazor Hybrid](https://docs.microsoft.com/en-us/aspnet/core/blazor/hybrid/tutorials/maui)
-- **Markup Language**: Flutter doesn't have a markup language — All UI is defined in code (Dart). MAUI lets developers define UI in XAML. \
+- **Markup Language**: Flutter doesn't have a markup language - All UI is defined in code (Dart). MAUI lets developers define UI in XAML. \
   More info: [Flutter FAQ](https://docs.flutter.dev/resources/faq#where-is-flutters-markup-language-why-doesnt-flutter-have-a-markup-syntax)
 - **Native UI**: Using Flutter without any extra configuration, your UI will look great on Android, but out of place on all other platforms. MAUI apps use native components and look at home on all supported platforms. It's possible to make Flutter apps look native on iOS using the Cupertino widgets, but this is extra work developers don't need to do with MAUI.
 
