--- a/content/blogs/openai-model-cheatsheet.mdx
+++ b/content/blogs/openai-model-cheatsheet.mdx
@@ -14,7 +14,7 @@ coverImage: null
 OpenAI’s model names (e.g., o4, 4o, 4.1) are confusing and change often.  
 This is my quick reference for picking the right model for any task 🧠⚡️
 
-This is a living document — if you spot mistakes or missing models,  
+This is a living document - if you spot mistakes or missing models,  
 please [make a PR](https://github.com/bradystroud/blog/edit/main/content/blogs/openai-model-cheatsheet.mdx)!  
 This page lives in GitHub Markdown via [TinaCMS 🦙](https://tina.io)
 
@@ -30,7 +30,7 @@ This page lives in GitHub Markdown via [TinaCMS 🦙](https://tina.io)
 | Status | Model | Release / Change | Strengths / Best Use-Cases | Trade-offs / Notes |
 | --- | --- | --- | --- | --- |
 | 🟢 | **GPT-5** | Aug 2025 | Unified “smart” (fast) + “thinking” (deep) routing model. Best for general work, reasoning, coding, and RAG. | Variable latency; cost scales with reasoning depth. |
-| 🟢 | **GPT-4.1** | 14 Apr 2025 | Flagship API model — top coding, logic, and 1 M token context. | Pricier than mini/nano. |
+| 🟢 | **GPT-4.1** | 14 Apr 2025 | Flagship API model - top coding, logic, and 1 M token context. | Pricier than mini/nano. |
 | 🟢 | **GPT-4.1 mini** | 14 Apr 2025 | ~90 % of 4.1 accuracy at lower price/latency; great default. | Slightly less reasoning depth. |
 | 🟢 | **GPT-4.1 nano** | 14 Apr 2025 | Ultra-fast and cheap; still supports 1 M context. Perfect for classification / autocomplete. | Loses nuance and creativity. |
 | 🟡 | **GPT-4o / 4o mini** | May-Jul 2024 | Multimodal (text + image + audio) real-time chat. | Slightly weaker reasoning than 4.1 series. |
