--- a/content/blogs/raid.mdx
+++ b/content/blogs/raid.mdx
@@ -19,7 +19,7 @@ Consider this example:
 
 Converting a CSV file to JSON.
 
-A dev might write a script to do this in a day, but with AI, we can build a prototype in an hour. The results will be good, but not always perfect—and since it’s AI, you can’t guarantee consistent behaviour. It’s also an expensive approach, since you’re paying for API calls to OpenAI.
+A dev might write a script to do this in a day, but with AI, we can build a prototype in an hour. The results will be good, but not always perfect-and since it’s AI, you can’t guarantee consistent behaviour. It’s also an expensive approach, since you’re paying for API calls to OpenAI.
 
 RAID approach:
 
