--- a/content/blogs/your-data-is-power.mdx
+++ b/content/blogs/your-data-is-power.mdx
@@ -13,9 +13,9 @@ tags:
 
 We live in a world where data is power. Companies know it. Governments know it. And honestly, you should know it too.
 
-One of the big goals for modern companies is to combine your data across different sources to learn as much about you as possible. That's where the power comes from — insights at scale.
+One of the big goals for modern companies is to combine your data across different sources to learn as much about you as possible. That's where the power comes from - insights at scale.
 
-Take Meta (Facebook, Instagram, WhatsApp) for example. Because they own multiple platforms, they have access to your interactions, your likes, your friends, even your moods. That level of control can influence your views — and maybe even your identity.
+Take Meta (Facebook, Instagram, WhatsApp) for example. Because they own multiple platforms, they have access to your interactions, your likes, your friends, even your moods. That level of control can influence your views - and maybe even your identity.
 
 ## Off topic - Content Bubbles Are Real
 
@@ -31,7 +31,7 @@ We need to seek out opposing views and research, not just passively consume what
 
 Yep. Even your favorite owl is doing it.
 
-Duolingo's free tier lets you translate real-world sentences — and those translations have been sold to businesses in the past. You're not just learning Spanish; you're doing crowd-sourced work. [Here's a Forbes article](https://www.forbes.com/sites/parmyolson/2014/01/22/crowdsourcing-capitalists-how-duolingos-founders-offered-free-education-to-millions/) that dives into this.
+Duolingo's free tier lets you translate real-world sentences - and those translations have been sold to businesses in the past. You're not just learning Spanish; you're doing crowd-sourced work. [Here's a Forbes article](https://www.forbes.com/sites/parmyolson/2014/01/22/crowdsourcing-capitalists-how-duolingos-founders-offered-free-education-to-millions/) that dives into this.
 
 ## Track Yourself - Start with Safari History
 
@@ -71,7 +71,7 @@ I whipped up a little shell script to extract Safari history across all profiles
 
 👉 [View on GitHub Gist](https://gist.github.com/bradystroud/24af8d6fa48c37987a487b454449225b)
 
-I've been using it to help jog my memory when filling in timesheets — super handy when you've forgotten what you did last Tuesday.
+I've been using it to help jog my memory when filling in timesheets - super handy when you've forgotten what you did last Tuesday.
 
 ## Final Thought
 
