--- a/content/blogs/openai-model-cheatsheet.mdx
+++ b/content/blogs/openai-model-cheatsheet.mdx
@@ -2,6 +2,7 @@
 canonicalUrl: "https://bradystroud.dev/blogs/openai-model-cheatsheet"
 title: OpenAI Chat Model Cheat Sheet - Decoding the Chaos
 date: 2025-10-10T10:00:00.000Z
+aiCollaboration: true
 tags:
   - openai
   - gpt
