feat: add comprehensive OG tags and Vercel OG image generation
- Add description field to TinaCMS blog schema for SEO meta descriptions
- Install @vercel/og package for dynamic OG image generation
- Create /api/og edge function that generates 1200x630 social images
  - Uses cover images as backgrounds when available
  - Falls back to gradient backgrounds
  - Displays title, description, and site branding
- Update blog template with complete Open Graph tags
  - Meta description for SEO
  - OG tags: title, description, type, url, image dimensions, site name
  - Twitter Card tags for better social sharing
  - Article metadata with published time and tags
- Add meta descriptions to all 16 blog posts (150-160 chars each)
- Update AGENTS.md with OG implementation details and best practices

--- a/content/blogs/app-framework-decision-tree.mdx
+++ b/content/blogs/app-framework-decision-tree.mdx
@@ -2,6 +2,7 @@
 canonicalUrl: "https://bradystroud.dev/blogs/app-framework-decision-tree"
 coverImage: /uploads/mobile-app-decision-tree.webp
 title: The Right Mobile App Framework - Comprehensive Decision Tree
+description: Choose the right mobile framework with this decision tree. Compare PWA, React Native, Flutter, .NET MAUI, and native development based on your team and requirements.
 date: 2025-03-12T07:30:00.000Z
 tags:
   - .net-maui
