--- a/content/blogs/aspire-windows-vm.mdx
+++ b/content/blogs/aspire-windows-vm.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/aspire-windows-vm"
 title: ".NET Aspire in Windows VM using Docker on the Mac Host"
+description: Run .NET Aspire in a Windows VM while leveraging macOS Docker daemon via SSH context. Avoid nested virtualization and Docker duplication on Apple Silicon Macs.
 date: 2025-09-29T00:00:00.000Z
 tags:
   - dotnet
