--- a/content/blogs/cocona-console-apps.mdx
+++ b/content/blogs/cocona-console-apps.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/cocona-console-apps"
 title: Cocona - Clean console apps in .NET
+description: Build clean .NET CLI apps with Cocona framework. Automatic help pages, dependency injection, and command parsing make console applications simple and maintainable.
 date: 2025-07-01T10:00:00.000Z
 tags:
   - cocona
