--- a/content/blogs/connect-windows-vm-to-mac-apis.mdx
+++ b/content/blogs/connect-windows-vm-to-mac-apis.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/connect-windows-vm-to-mac-apis"
 title: Connecting Windows VMs to Mac-Hosted APIs
+description: Securely connect Windows VM apps to Mac-hosted APIs using SSH tunnels and dev certificates. Complete guide for Parallels development with .NET and IdentityServer.
 date: 2025-09-30T00:00:00.000Z
 tags:
   - parallels
