--- a/content/blogs/easy-ai-refactors.mdx
+++ b/content/blogs/easy-ai-refactors.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/easy-ai-refactors"
 title: Make Large-Scale Refactors Easy with Parallel AI Agents
+description: Learn how to turn week-long refactors into 20-minute tasks using 15 AI agents working in parallel. A practical guide to distributed AI orchestration for large-scale code changes.
 date: 2026-01-27T12:00:00.000Z
 aiCollaboration: true
 tags:
