--- a/content/blogs/loading-guards-in-blazor.mdx
+++ b/content/blogs/loading-guards-in-blazor.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/loading-guards-in-blazor"
 title: 🚦 Loading Guards in Blazor - Stop Writing Null-Checks Everywhere
+description: Eliminate scattered null-checks in Blazor with loading guard components. Clean pattern for handling async data loading with skeletons and progressive UI rendering.
 coverImage: null
 date: 2025-04-15T10:00:00.000Z
 tags:
