--- a/content/blogs/maui-blazor.mdx
+++ b/content/blogs/maui-blazor.mdx
@@ -2,6 +2,7 @@
 canonicalUrl: 'https://bradystroud.dev/blogs/maui-blazor'
 coverImage: /uploads/header-.net-maui-blazor.webp
 title: .NET MAUI Blazor template - Build your UI once
+description: Build cross-platform apps with one shared Blazor UI codebase. Run on Android, iOS, Windows, macOS, and web using .NET MAUI and Blazor hybrid architecture.
 date: 2022-07-27T14:30:00.000Z
 tags:
   - .net-maui
