--- a/content/blogs/maui-setup-macos.mdx
+++ b/content/blogs/maui-setup-macos.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/maui-setup-macos"
 title: ".NET MAUI setup on macOS - build once, run everywhere"
+description: Complete .NET MAUI setup guide for macOS. Install workload, Xcode, and Android Studio to build cross-platform apps for iOS, Android, and Mac with one codebase.
 date: 2025-07-01T10:00:00.000Z
 tags:
   - .net-maui
