--- a/content/blogs/maui-vs-flutter.mdx
+++ b/content/blogs/maui-vs-flutter.mdx
@@ -2,6 +2,7 @@
 canonicalUrl: "https://bradystroud.dev/blogs/maui-vs-flutter"
 coverImage: /uploads/grrr.webp
 title: .NET MAUI vs Flutter - Multi-platform frameworks showdown
+description: A hands-on comparison of .NET MAUI and Flutter for cross-platform development. Compare native UI, markup languages, and developer experience to choose the right framework.
 date: 2022-07-22T14:30:00.000Z
 tags:
   - maui-ui-july
