--- a/content/blogs/openai-model-cheatsheet.mdx
+++ b/content/blogs/openai-model-cheatsheet.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/openai-model-cheatsheet"
 title: OpenAI Chat Model Cheat Sheet - Decoding the Chaos
+description: OpenAI model names (o4, 4o, 4.1) are confusing. Quick reference guide to GPT-5, GPT-4.1, mini, nano, and legacy models with strengths, trade-offs, and best use cases.
 date: 2025-10-10T10:00:00.000Z
 aiCollaboration: true
 tags:
