--- a/content/blogs/professional-growth.mdx
+++ b/content/blogs/professional-growth.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/professional-growth"
 title: Guide to professional Growth
+description: Transition from developer to management with 4 proven strategies. Be visible, understand company goals, be memorable, and do the job you want before you have it.
 date: 2024-07-28T14:30:00.000Z
 tags:
   - career
