--- a/content/blogs/raid.mdx
+++ b/content/blogs/raid.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/raid"
 title: RAID - Rapid AI Development
+description: Use AI to build features fast, then replace with optimized code later. RAID approach lets you ship quickly while managing technical debt strategically.
 date: 2025-04-17T10:00:00.000Z
 tags:
   - openai
