--- a/content/blogs/vscode-powershell-session-fix.mdx
+++ b/content/blogs/vscode-powershell-session-fix.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: https://bradystroud.dev/blogs/vscode-powershell-session-fix
 title: "Fixing the 'PowerShell session not found' issue in VS Code"
+description: Fix the 'PowerShell session not found' error in VS Code by manually setting the PowerShell executable path. Quick solution for macOS users with Homebrew installations.
 date: 2025-10-03T00:00:00.000Z
 tags:
   - vscode
