--- a/content/blogs/word-doc-to-pdf.mdx
+++ b/content/blogs/word-doc-to-pdf.mdx
@@ -2,6 +2,7 @@
 canonicalUrl: 'https://bradystroud.dev/blogs/word-doc-to-pdf'
 coverImage: /uploads/powerautomate-demo.png
 title: 'Word Doc to PDF: Evaluating Tools and Landing on PowerAutomate'
+description: Automated Word to PDF conversion is harder than it looks. Learn from our trials with Foxit PDF and IronPDF, and why Microsoft Power Automate won for pixel-perfect fidelity.
 date: 2025-10-19T17:30:00.000Z
 aiCollaboration: true
 tags:
