--- a/content/blogs/your-data-is-power.mdx
+++ b/content/blogs/your-data-is-power.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/your-data-is-power"
 title: Your Data Is Power - Even Your Search History
+description: Companies combine your data for insights. Learn how to take back control by tracking your own Safari browser history with a simple macOS script and SQLite queries.
 date: 2025-06-30T14:30:00.000Z
 tags:
   - privacy
