--- a/content/blogs/cultural-exchange.mdx
+++ b/content/blogs/cultural-exchange.mdx
@@ -1,6 +1,7 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/cultural-exchange"
 title: Cultural Exchange - 2 Months with SSW France
+description: Two months living and working in Strasbourg with SSW France. First solo travel experience across 5 European countries with valuable lessons in independence and adaptability.
 date: 2024-07-27T14:30:00.000Z
 coverImage: "/cultural-exchange/strasbourg.jpeg"
 tags:
